fix: remove deprecated newInstance()